--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Sina Banan, Designer, Developer, Freelancer, Photographer"></span></h1>
+        <h1>I'm <span class="typed" data-typed-items="Sina Banan, System trader, Python and embedded C developer, Electronic engineer, Film Editor"></span></h1>
         <p>Designer, Developer, Freelancer, Photographer</p>
 
         <ul class="list-unstyled list-social">
