--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Sina Banan, System trader, Python and embedded C developer, Electronic engineer, Film Editor"></span></h1>
-        <p>Designer, Developer, Freelancer, Photographer</p>
+        <h1>I'm <span class="typed" data-typed-items="Sina Banan, System trader, Python and C developer, Electronic engineer"></span></h1>
+        <p>Designer, Developer, System trader, Electronic engineer</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="bi bi-facebook"></i></a></li>
